--- a/css/projects-pages.css
+++ b/css/projects-pages.css
@@ -158,6 +158,7 @@ select {
     border: 1px solid black;
     width: 797px;
     height: 350px;
+    cursor: pointer;
 }
 
 input[type="radio"] {
@@ -178,6 +179,18 @@ input[type="radio"] {
 
 #slide4:checked~.wrapper-holder {
     transform: translateX(-300%);
+}
+
+#slide5:checked~.wrapper-holder {
+    transform: translateX(-400%);
+}
+
+#slide6:checked~.wrapper-holder {
+    transform: translateX(-500%);
+}
+
+#slide7:checked~.wrapper-holder {
+    transform: translateX(-600%);
 }
 
 .nav {
@@ -202,7 +215,10 @@ input[type="radio"] {
 #slide1:checked~.nav label[for="slide1"],
 #slide2:checked~.nav label[for="slide2"],
 #slide3:checked~.nav label[for="slide3"],
-#slide4:checked~.nav label[for="slide4"] {
+#slide4:checked~.nav label[for="slide4"],
+#slide5:checked~.nav label[for="slide5"],
+#slide6:checked~.nav label[for="slide6"],
+#slide7:checked~.nav label[for="slide7"] {
     background: var(--color-fuente);
     width: 30px;
 }
